- put ruff configuration in pyproject.toml
- fix bug in ManualBeamFinder, must be a matplotlib thing
- Add LipidLeafletGuest, a LipidLeaflet that can have another molecule
  (e.g. cholesterol) in the tail region.
- add refnx.reflect.possibly_create_scatterer.
- remove refnx._lib._qmc, changing to scipy.stats.qmc.
- transition vendored ptemcee to use np.random.Generator.
- convert use of scipy.integrate.quadrature to scipy.integrate.quad.
- Appropriate unit conversion when loading ORSO data (1/nm to 1/angstrom).

0.1.51
------
- Modify to allow loading of .ORB ORSO files.
- Capability for calculating PNR theoretical curves.
- Fix some tests for new periodictable release.
- Stop using deprecated setuptools module.
- Analysis for polarised neutron reflectometry.

0.1.52
------
- relax reflection kernel accuracy for i386. Necessary for Debian build.
- add Orso file output to `reduce.reduce_stitch`.
- Improve performance of ReflectModelTL, laying groundwork for footprint
  correction.

0.1.53
------
- Reduction - fallback to normalising by time if no beam monitor counts are
  present.
- renamed test directories from refnx.<module>.test to refnx.<module>.tests.
  This is to prevent name shadowing, but also to bring it into line with e.g.
  scipy/numpy that use that nomenclature. This might mean downstream packages
  who use files from those directories have to do some renaming.

0.1.54
------
- Replaced several instances of __file__ with importlib.resources.
- Fixed bug in ManualBeamFind.

0.1.55
------
- Added example for reading/writing ORSO model language file, working with
  ORSO dataset.
- refnx.dataset.OrsoDataset.setup_analysis() method creates a Structure,
  ReflectModel, and Objective, if there was an ORSO model language description
  of the interfacial model within the ORSO file.
- refnx.dataset.OrsoDataset.update_model() method updates the model
  description within the ORSO file from a given Structure.
- XRDML v2.0 file reader updates.

0.1.56
------